<resources>
    <string name="app_name">insatagram</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_plus">plus</string>
    <string name="title_heart">heart</string>
    <string name="title_user">user</string>
    <string name="title_profile">profile</string>
</resources>