<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

   <item
    android:id="@+id/navigation_home"
    android:icon="@drawable/home"
    android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/search"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/plus"
        android:icon="@drawable/plus"
        android:title="@string/title_plus" />

    <item
        android:id="@+id/heart"
        android:icon="@drawable/heart"
        android:title="@string/title_heart" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/user"
        android:title="@string/title_profile" />






</menu>